# rust-chess

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: bit_board.rs  bit_board_const.rs  board.rs  board_file.rs  board_position.rs  board_rank.rs  board_scanner.rs  bot.rs  castle_rights.rs  castle_side.rs  chess_piece.rs  chess_piece_move_ruleset.rs  chess_piece_move_rulesets.rs  color.rs  color_castle_rights.rs  color_piece_bit_board.rs  colored_piece.rs  direction.rs  direction_amount.rs  direction_limit.rs  evaluate_check.rs  evaluate_game_state.rs  facing_direction.rs  fen.rs  full_color_piece_bit_board.rs  full_piece_bit_board.rs  game_state.rs  game_status.rs  history.rs  invalid_move_error.rs  lib.rs  move.rs  move_clock.rs  move_handler.rs  move_history_entry.rs  move_ruleset.rs  move_search.rs  pgn.rs  piece.rs  piece_bit_board.rs  (+4 more)
src/bit_board/: bit_board.rs  bit_board_const.rs  color_piece_bit_board.rs  full_color_piece_bit_board.rs  full_piece_bit_board.rs  mod.rs  piece_bit_board.rs
src/board/: board.rs  board_file.rs  board_position.rs  board_rank.rs  board_scanner.rs  generic_board.rs  mod.rs  position.rs
src/bot/: mod.rs
src/chess_move/: chess_move.rs  chess_move_handler.rs  chess_move_ruleset.rs  chess_move_search.rs  invalid_chess_move_error.rs  mod.rs
src/direction/: castle_side.rs  direction.rs  direction_amount.rs  facing_direction.rs  mod.rs
src/gui/: mod.rs
src/notation/: fen.rs  pgn.rs
src/piece/: chess_piece.rs  chess_piece_move_ruleset.rs  chess_piece_move_rulesets.rs  mod.rs  piece.rs  (+1 more)
(+69 files in other folders)
