[package]
name = "rust-chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmaps = "3"
thiserror = "1"
rstest = "0.18"
itertools = "0.11.0"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bevy = "0.12"
bevy-inspector-egui = "0.21"
smallvec = "1"
futures-lite = "2"
